<resources>
    <string name="app_name">CountriesApp</string>
    <string name="retry_label">Retry</string>
    <string name="countries_fragment_title">Countries list</string>
    <string name="dialog_loading_error_title">Could not load countries</string>
    <string name="dialog_loading_error_message">Could not load countries. Your connectivity may be down or the network unreachable.</string>
    <string name="dialog_loading_error_local_data_message">Could not load countries. Your connectivity may be down or the network unreachable. Anyway, you can proceed by using local data.</string>
    <string name="start_anyway_label">Start anyway</string>
    <string name="exit_app_label">Exit app</string>
    <string name="search_text_field_hint">United States, Argentina, Colombia </string>
    <string name="downloading_country_flag_label">Downloading country flags…</string>
    <string name="downloading_coats_of_arms_label">Downloading coats of arms…</string>
    <string name="downloading_country_flag_message">Downloading country flag images…</string>
    <string name="downloading_coats_of_arms_message">Downloading coats of arms images…</string>
    <string name="download_failed">Download failed</string>
    <string name="download_coats_of_arms_failed_message">Download of coats of arms failed</string>
    <string name="download_country_flag_failed_message">Download of country flags failed</string>
    <string name="notification_channel_name">Application activity</string>
    <string name="no_country_in_filter">Sorry, it seems that no country matches your search.</string>
    <string name="country_info_label">Info</string>
    <string name="coat_of_arms_label">Coat of arms</string>
    <string name="coat_of_arms_caption">%s coat of arms</string>
    <string name="loading_title">Loading screen</string>
    <string name="countries_details_fragment_title">Country details screen</string>
    <string name="area_square_label">Area (m²)</string>
    <string name="capital_item">Capital</string>
    <string name="borders_label">Borders</string>
    <string name="car_side_label">Car side</string>
    <string name="official_name_label">Official name</string>
    <string name="un_member_caption">UN member</string>
    <string name="coat_of_arms_missing">This country does not have a coat of arms.</string>
    <string name="download_success">Download success</string>
    <string name="download_flags_success_message">Country flags downloaded</string>
    <string name="download_coats_success_message">Coats of arms downloaded</string>
    <string name="population_label">Population</string>
    <string name="native_name_label">Native name</string>
    <string name="continent_label">Continents</string>
    <string name="demonym_male_label">Male Demonym</string>
    <string name="demonym_female_label">Female Demonym</string>
    <string name="timezones_label">Timezones</string>
</resources>