<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/countries_navigation"
        app:startDestination="@id/splashscreen_fragment">

    <fragment
            android:id="@+id/splashscreen_fragment"
            android:name="com.nasp.countriesapp.view.splashscreen.SplashScreenFragment"
            android:label="@string/loading_title"
            tools:layout="@layout/fragment_splashscreen">
        <action
                android:id="@+id/action_splashscreen_fragment_to_country_fragment"
                app:destination="@id/country_fragment"
                app:popUpToInclusive="true"
                app:launchSingleTop="true"
                app:popUpTo="@id/country_fragment"
                app:enterAnim="@anim/slide_up"
                app:exitAnim="@anim/stationary"
                app:popEnterAnim="@anim/stationary"
                app:popExitAnim="@anim/slide_down" />
    </fragment>
    <fragment
            android:id="@+id/country_fragment"
            android:name="com.nasp.countriesapp.view.country.CountriesListFragment"
            android:label="@string/countries_fragment_title"
            tools:layout="@layout/fragment_list_countries">

        <action
                android:id="@+id/action_country_fragment_to_country_details_fragment"
                app:destination="@id/country_details_fragment"
                app:enterAnim="@anim/slide_right"
                app:exitAnim="@anim/stationary"
                app:popEnterAnim="@anim/stationary"
                app:popExitAnim="@anim/slide_to_right"/>
    </fragment>
    <fragment
            android:id="@+id/country_details_fragment"
            android:name="com.nasp.countriesapp.view.detailcountry.DetailCountriesFragment"
            android:label="@string/countries_details_fragment_title"
            tools:layout="@layout/fragment_country_details" >
        <argument
                android:name="countriesEntity"
                app:argType="com.nasp.countriesapp.room.model.CountriesEntity" />

        <argument
                android:name="flag"
                app:argType="android.graphics.Bitmap"
                android:defaultValue="@null"
                app:nullable="true"/>
        <action
                android:id="@+id/action_country_details_fragment_to_country_fragment"
                app:destination="@id/country_fragment" />
    </fragment>

</navigation>